article size on mobile fixed

--- a/resources/assets/sass/component/home.scss
+++ b/resources/assets/sass/component/home.scss
@@ -216,7 +216,7 @@
             height: 187px;
           }
           @media screen and (max-width: 920px) {
-            height: 209px;
+            height: 309px;
           }
           &__wrapper {
             padding-right: 10px;
